[ ko.json ] fix typo

--- a/contribution/lang/ko.json
+++ b/contribution/lang/ko.json
@@ -593,7 +593,7 @@
  	 	 	 	"eng": "Collect Protection Fees"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "정부 공무원과 짭새들에게 뇌물을 주고 사업자와 시민으로부터 보호비를 걷어보자. 운이 좋으면 '에픽' 아이템을 얻을 수 있을지도 모. (점령 순위 Top 2 갱단의 독점 권리)",
+ 	 	 	 	"trans": "정부 공무원과 짭새들에게 뇌물을 주고 사업자와 시민으로부터 보호비를 걷어보자. 운이 좋으면 '에픽' 아이템을 얻을 수 있을지도 모르지. (점령 순위 Top 2 갱단의 독점 권리)",
  	 	 	 	"eng": "Bribe government officials and the SLPD to collect protection fees from business owners and citizens in Shangri-La. Maybe you’ll get some EPIC items from them? (Exclusive to the Top 2 Gangs on the Occupation Leaderboard"
  	 	 	}
  	 	},
