--- a/contribution/lang/cs.json
+++ b/contribution/lang/cs.json
@@ -43,12 +43,12 @@
  	 	 	"editMotto": {
  	 	 	 	"modal": {
  	 	 	 	 	"title": {
- 	 	 	 	 	 	"trans": "Prosím, zadejte své gangové motoru",
+ 	 	 	 	 	 	"trans": "Prosím, zadejte své gangové moto",
  	 	 	 	 	 	"eng": "Please enter your gang motto"
  	 	 	 	 	}
  	 	 	 	},
  	 	 	 	"button": {
- 	 	 	 	 	"trans": "Edit Gang Motto",
+ 	 	 	 	 	"trans": "Uoravit Gangové Motto",
  	 	 	 	 	"eng": "Edit Gang Motto"
  	 	 	 	}
  	 	 	},
@@ -99,7 +99,7 @@
  	 	 	},
  	 	 	"occupation": {
  	 	 	 	"noClan": {
- 	 	 	 	 	"trans": "Žádná gangová tato oblast neobjevila",
+ 	 	 	 	 	"trans": "V tuto chvíli Tato oblast není okupována gangem",
  	 	 	 	 	"eng": "No gang has occupied this area yet"
  	 	 	 	}
  	 	 	},
@@ -118,7 +118,7 @@
  	 	 	 	"eng": "Deposit"
  	 	 	},
  	 	 	"depositDesc": {
- 	 	 	 	"trans": "Dát bitcoins do banky",
+ 	 	 	 	"trans": "Dát bitcoin do banky",
  	 	 	 	"eng": "Put Bitcoins into bank"
  	 	 	},
  	 	 	"withdraw": {
@@ -142,7 +142,7 @@
  	 	 	 	"eng": "Withdraw Item"
  	 	 	},
  	 	 	"takeItemFromVaultDesc": {
- 	 	 	 	"trans": "Vezměte si položky z vaší klenby",
+ 	 	 	 	"trans": "Vezměte si položky z vašleho trezoru",
  	 	 	 	"eng": "Take items out from your vault"
  	 	 	},
  	 	 	"upgradeSlot": {
@@ -206,7 +206,7 @@
  	 	},
  	 	"generalCaptcha": {
  	 	 	"story": {
- 	 	 	 	"trans": "Našli jste starý uzamčený trezor, zdá se, že je to post-it s nějakým textem napsaným na něm.",
+ 	 	 	 	"trans": "Našli jste starý uzamčený trezor, zdá se, že je to post-it s nějakým textem nápisem na něm.",
  	 	 	 	"eng": "You found an old locked safe box, there seems like a post-it with some text written on it."
  	 	 	},
  	 	 	"title": {
@@ -288,7 +288,7 @@
  	 	 	 	"eng": "SL Medical Center"
  	 	 	},
  	 	 	"title": {
- 	 	 	 	"trans": "Flatlined",
+ 	 	 	 	"trans": "Zploštělý",
  	 	 	 	"eng": "Flatlined"
  	 	 	},
  	 	 	"subTitleSmall": {
