Language Update cs.json
Translation and removal of nonsensical sentences

--- a/contribution/lang/cs.json
+++ b/contribution/lang/cs.json
@@ -468,38 +468,38 @@
  	 	 	 	"eng": "Item Inbox"
  	 	 	},
  	 	 	"crafting": {
- 	 	 	 	"trans": "Crafting",
+ 	 	 	 	"trans": "Výroba",
  	 	 	 	"eng": "Crafting"
  	 	 	}
  	 	},
  	 	"communityItemLore": {
  	 	 	"noLoreButton": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "Vytvořit Lore",
+ 	 	 	 	 	"trans": "Vytvořit Příběh",
  	 	 	 	 	"eng": "Create Lore"
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "Pro tuto položku ještě neexistuje žádná komunitní tradice, buďte první, kdo pro něj vytvoří.",
+ 	 	 	 	 	"trans": "Pro tuto položku ještě neexistuje žádný komunitní příběh, buďte první, kdo pro něj vytvoří.",
  	 	 	 	 	"eng": "There is no community lore for this item yet, be the first to create one for it."
  	 	 	 	}
  	 	 	},
  	 	 	"openButton": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "Společenství Lore",
+ 	 	 	 	 	"trans": "Komunitní příběh",
  	 	 	 	 	"eng": "Community Lore"
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "Otevřete komunitní tradici pro tuto položku",
+ 	 	 	 	 	"trans": "Otevřete komunitní příběh pro tuto položku",
  	 	 	 	 	"eng": "Open the community lore for this item"
  	 	 	 	}
  	 	 	},
  	 	 	"editButton": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "upravit tuto lore",
+ 	 	 	 	 	"trans": "upravit tento příběh",
  	 	 	 	 	"eng": "edit this lore"
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "Upravit tuto komunitou lore",
+ 	 	 	 	 	"trans": "Upravit tento komunitní příběh",
  	 	 	 	 	"eng": "Edit this community lore"
  	 	 	 	}
  	 	 	}
@@ -515,7 +515,7 @@
  	 	 	 	 	"eng": "Extensive repair required"
  	 	 	 	},
  	 	 	 	"instruction": {
- 	 	 	 	 	"trans": "Tato položka je rozbitá, přiveďte ji do zbraně Smith pro opravu",
+ 	 	 	 	 	"trans": "Tato položka je rozbitá, doneste ji za Zbrojířem pro opravu",
  	 	 	 	 	"eng": "This item is broken, bring it to Weapon Smith for repair"
  	 	 	 	}
  	 	 	},
@@ -527,7 +527,7 @@
  	 	 	 	]
  	 	 	},
  	 	 	"areaEffect": {
- 	 	 	 	"trans": "[AOE] Oblast efektu, efekt této položky použije spojence v boji s vámi.",
+ 	 	 	 	"trans": "[AOE] Oblast efektu, efekt této položky použije spojenec v boji s vámi.",
  	 	 	 	"eng": "[AOE] Area of Effect, the effect of this item will apply allies in combat with you."
  	 	 	},
  	 	 	"equip": {
@@ -535,11 +535,11 @@
  	 	 	 	"eng": "Equip"
  	 	 	},
  	 	 	"unequip": {
- 	 	 	 	"trans": "Sjednocený",
+ 	 	 	 	"trans": "Odbavit",
  	 	 	 	"eng": "Unequip"
  	 	 	},
  	 	 	"use": {
- 	 	 	 	"trans": "Použití",
+ 	 	 	 	"trans": "Použit",
  	 	 	 	"eng": "Use"
  	 	 	},
  	 	 	"unlock": {
@@ -618,7 +618,7 @@
  	 	},
  	 	"map": {
  	 	 	"interactable": {
- 	 	 	 	"trans": "Spolupracující",
+ 	 	 	 	"trans": "Interagovatelné",
  	 	 	 	"eng": "Interactable"
  	 	 	},
  	 	 	"hiddenNpcTip": {
@@ -687,7 +687,7 @@
  	 	 	 	"eng": "system link"
  	 	 	},
  	 	 	"streetCred": {
- 	 	 	 	"trans": "Ulice věřit",
+ 	 	 	 	"trans": "Pouliční víra",
  	 	 	 	"eng": "Street Cred"
  	 	 	},
  	 	 	"status": {
@@ -699,7 +699,7 @@
  	 	 	 	"eng": "Bio"
  	 	 	},
  	 	 	"bioNotFound": {
- 	 	 	 	"trans": "Redaktived",
+ 	 	 	 	"trans": "REDIGOVÁNO",
  	 	 	 	"eng": "REDACTED"
  	 	 	},
  	 	 	"numOfMember": {
@@ -738,7 +738,7 @@
  	 	 	 	 	"eng": "Send Gift"
  	 	 	 	},
  	 	 	 	"inviteToGang": {
- 	 	 	 	 	"trans": "Pozvěte na gang",
+ 	 	 	 	 	"trans": "Pozvat do gangu",
  	 	 	 	 	"eng": "Invite to Gang"
  	 	 	 	},
  	 	 	 	"addToFriend": {
@@ -750,7 +750,7 @@
  	 	 	 	 	"eng": "Remove from Friend List"
  	 	 	 	},
  	 	 	 	"giveStreetCred": {
- 	 	 	 	 	"trans": "Dát pouliční cred",
+ 	 	 	 	 	"trans": "Dát pouliční víru",
  	 	 	 	 	"eng": "Give Street Cred"
  	 	 	 	}
  	 	 	},
@@ -768,7 +768,7 @@
  	 	 	},
  	 	 	"changePictureDescription": {
  	 	 	 	"trans": "Chcete-li poskytnout vám nejlépe žádné zkušenosti s pay-to-win, je nutné, aby všechny placené rysy jsou kosmetické jako profilové snímky a chatové rámečky, \n                                                 nebo globální nadšence, které těží všem ve hře :) \n                                                 Doufám, že se vám líbí žádné zkušenosti s pay-to-win!",
- 	 	 	 	"eng": "To provide the best No Pay-to-Win experience to you, it is necessary that all paid features are cosmetic like profile images & chat frames, \n                                                or global buffs that benefits everyone in game :)\n                                                Hope you enjoy the No Pay-to-Win experience!"
+ 	 	 	 	"eng": "Abychom vám poskytli co nejlepší zážitek bez placení za výhru, je nutné, aby všechny placené funkce byly kosmetické, jako jsou profilové obrázky a rámečky chatu., \n                                                or global buffs that benefits everyone in game :)\n                                                Hope you enjoy the No Pay-to-Win experience!"
  	 	 	},
  	 	 	"confirm": {
  	 	 	 	"trans": "Přispět nyní",
@@ -852,26 +852,26 @@
  	 	"quest": {
  	 	 	"globalQuest": {
  	 	 	 	"progressTitle": {
- 	 	 	 	 	"trans": "Pořadí SL-DATA Pevnost",
+ 	 	 	 	 	"trans": "Narušení SL-DATA Pevnosti",
  	 	 	 	 	"eng": "SL-Data Fortress Breach"
  	 	 	 	},
  	 	 	 	"infoBox": {
  	 	 	 	 	"title": {
- 	 	 	 	 	 	"trans": "Probíhá kyberprostor",
+ 	 	 	 	 	 	"trans": "Probíhající hacking v kyberprostoru",
  	 	 	 	 	 	"eng": "Cyberspace hacking in progress"
  	 	 	 	 	},
  	 	 	 	 	"subtitle": {
- 	 	 	 	 	 	"trans": "Spojte síly s jinými NETRunners k porušení pevnosti SL-DATE k poskytnutí všech hráčů s buffem",
+ 	 	 	 	 	 	"trans": "Spojte síly s ostatními Netrunnery, abyste prolomili pevnost SL-Data a poskytli všem hráčům bonusy.",
  	 	 	 	 	 	"eng": "Join forces with other Netrunners to breach the SL-Data Fortress to grant all players with buff"
  	 	 	 	 	}
  	 	 	 	},
  	 	 	 	"completeBox": {
  	 	 	 	 	"title": {
- 	 	 	 	 	 	"trans": "Operace porušení",
+ 	 	 	 	 	 	"trans": "Operace narušení dokončena",
  	 	 	 	 	 	"eng": "Breach operation completed"
  	 	 	 	 	},
  	 	 	 	 	"subtitle": {
- 	 	 	 	 	 	"trans": "Dálkové využití nasazení, prosím čekej ...",
+ 	 	 	 	 	 	"trans": "Vzdálené nasazení exploitu, počkejte prosím...",
  	 	 	 	 	 	"eng": "Remote exploit deploying, please wait..."
  	 	 	 	 	}
  	 	 	 	}
@@ -883,7 +883,7 @@
  	 	 	 	"eng": "rewards"
  	 	 	},
  	 	 	"rewardAvailable": {
- 	 	 	 	"trans": "Klikněte pro sběr odměny",
+ 	 	 	 	"trans": "Klikněte pro sebrání odměny",
  	 	 	 	"eng": "Click to collect reward"
  	 	 	},
  	 	 	"viewDetails": {
@@ -905,7 +905,7 @@
  	 	},
  	 	"setting": {
  	 	 	"langWarning": {
- 	 	 	 	"trans": "Tento jazykový balíček je otevřený zdroj a přispěli našimi hráči, text nemusí být plně přeložen a může obsahovat chyby. Prosím, neváhejte upravovat a přispět z naší github stránky",
+ 	 	 	 	"trans": "Tento jazykový balíček má otevřený zdrojový kód a přispívají do něj naši hráči, text nemusí být plně přeložen a může obsahovat chyby. neváhejte jej upravovat a přispívat z naší stránky na Githubu.",
  	 	 	 	"eng": "This language pack is open source and contributed by our players, the text may not be fully translated and could contain mistakes. please feel free to edit and contribute from our Github page"
  	 	 	},
  	 	 	"langGithub": {
@@ -926,12 +926,12 @@
  	 	 	},
  	 	 	"disableAttackBar": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "Zakázat načasování napadení",
+ 	 	 	 	 	"trans": "Zakázat panel časování útoku",
  	 	 	 	 	"eng": "Disable Attack Timing Bar"
  	 	 	 	},
  	 	 	 	"description": {
  	 	 	 	 	"trans": "Zakázání načasovacího panelu útoku nebude udělit další poškození",
- 	 	 	 	 	"eng": "Disabling attack timing bar will not grant extra damage"
+ 	 	 	 	 	"eng": "Vypnutím panelu časování útoku nezískáte dodatečné poškození."
  	 	 	 	}
  	 	 	},
  	 	 	"blockGifts": {
@@ -1050,7 +1050,7 @@
  	 	 	 	"trans": "Možná si koupit nějakou léčebnou položku jako první?",
  	 	 	 	"eng": "Maybe buy some healing item first?",
  	 	 	 	"des": {
- 	 	 	 	 	"trans": "Vypadá to, že nemáte žádnou bolest pryč s vámi, nakupujte ji z Trinoky Mart ve městě nejprve před vstupem do dungeonů, protože nebudete regenovat po bitvách v žaláři",
+ 	 	 	 	 	"trans": "Vypadá to, že nemáte žádné léky s vámi, nakupujte ji z Trinoky Mart ve městě nejprve před vstupem do dungeonů, protože nebudete regenovat po bitvách v žaláři",
  	 	 	 	 	"eng": "Seems like you dont have any Pain Away with you, purchase it from Trinoky Mart in the city first before entering dungeons, since you will not regen after battles in dungeon"
  	 	 	 	},
  	 	 	 	"cancel": {
@@ -1245,7 +1245,7 @@
  	 	},
  	 	"craftingPage": {
  	 	 	"title": {
- 	 	 	 	"trans": "Crafting",
+ 	 	 	 	"trans": "Výroba",
  	 	 	 	"eng": "Crafting"
  	 	 	},
  	 	 	"onlyShowCraftable": {
@@ -1634,7 +1634,7 @@
  	},
  	"misc": {
  	 	"back": {
- 	 	 	"trans": "zadní",
+ 	 	 	"trans": "zpět",
  	 	 	"eng": "back"
  	 	},
  	 	"escape": {
@@ -1772,7 +1772,7 @@
  	 	 	"eng": "Password"
  	 	},
  	 	"craft": {
- 	 	 	"trans": "řemeslo",
+ 	 	 	"trans": "výroba",
  	 	 	"eng": "craft"
  	 	},
  	 	"ok": {
@@ -2904,11 +2904,11 @@
  	 	},
  	 	"healing1": {
  	 	 	"name": {
- 	 	 	 	"trans": "Bolest",
+ 	 	 	 	"trans": "odstranit bolest",
  	 	 	 	"eng": "Pain Away"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Máte bolest hlavy? Použijte bolest pryč ™ pro zmírnění bolesti!",
+ 	 	 	 	"trans": "Máte bolesti hlavy? Použijte léky ™ pro zmírnění bolesti!",
  	 	 	 	"eng": "Do you have headache? Use Pain Away™ to relieve your pain!"
  	 	 	}
  	 	},
@@ -3004,11 +3004,11 @@
  	 	},
  	 	"healingArea1": {
  	 	 	"name": {
- 	 	 	 	"trans": "Bolest pryč sprej",
+ 	 	 	 	"trans": "léky ve spreji",
  	 	 	 	"eng": "Pain Away Spray"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Vy a vaše přátelé mají oba bolesti hlavy? Použijte bolest pryč spray ™ pro úlevu vaší bolesti!",
+ 	 	 	 	"trans": "Vy a vaše přátelé mají oba bolesti hlavy? Použijte léky ve spreji ™ pro úlevu vaší bolesti!",
  	 	 	 	"eng": "Do you and your friends both have headaches? Use Pain Away Spray™ to relief your pain!"
  	 	 	}
  	 	},
