Korean translate update

--- a/contribution/lang/ko.json
+++ b/contribution/lang/ko.json
@@ -563,8 +563,8 @@
  	 	 	 	"eng": "Decrypt memory shard"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "유용한 정보를 얻기 위해 메모리 샤드를 해독한다",
- 	 	 	 	"eng": "Decrypt a memory shard to retrieve useful intel. \r\n         *샤드는 대화 내용이나 특정 정보가 담겨 있는 작은 데이터 카드를 말한다. 샤드 안에는 대부분 사이버펑크 세계의 잡학지식이 들어 있지만, 일부 샤드에는 임무 수행에 필요한 핵심 자료가 담겨 있는 경우도 있다."
+ 	 	 	 	"trans": "유용한 정보를 얻기 위해 메모리 샤드를 해독한다. \r\n         *샤드는 대화 내용이나 특정 정보가 담겨 있는 작은 데이터 카드를 말한다. 샤드 안에는 대부분 사이버펑크 세계의 잡학지식이 들어 있지만, 일부 샤드에는 임무 수행에 필요한 핵심 자료가 담겨 있는 경우도 있다.",
+ 	 	 	 	"eng": "Decrypt a memory shard to retrieve useful intel."
  	 	 	}
  	 	},
  	 	"clanOccupation": {
