Korean translate update

--- a/contribution/lang/ko.json
+++ b/contribution/lang/ko.json
@@ -964,7 +964,7 @@
  	 	},
  	 	"expMultiplier": {
  	 	 	"name": {
- 	 	 	 	"trans": "전두엽 피질 향상 송신기 (경벞)",
+ 	 	 	 	"trans": "전두엽 피질 향상 송신기",
  	 	 	 	"eng": "Frontal Cortex Optimization Transmitter"
  	 	 	},
  	 	 	"description": {
@@ -974,7 +974,7 @@
  	 	},
  	 	"btcMultiplier": {
  	 	 	"name": {
- 	 	 	 	"trans": "거래 취약점 공격 송신기 (돈벞) ",
+ 	 	 	 	"trans": "거래 취약점 공격 송신기",
  	 	 	 	"eng": "Transaction Exploit Transmitter"
  	 	 	},
  	 	 	"description": {
@@ -1355,7 +1355,7 @@
  	 	},
  	 	"hackTool": {
  	 	 	"name": {
- 	 	 	 	"trans": "프로토콜 해킹 샤드",
+ 	 	 	 	"trans": "프로토콜 브리칭 샤드",
  	 	 	 	"eng": "Protocol Breach Shard"
  	 	 	},
  	 	 	"description": {
