--- a/contribution/lang/ru.json
+++ b/contribution/lang/ru.json
@@ -1997,7 +1997,7 @@
  	 	 	 	"eng": "Language"
  	 	 	},
  	 	 	"langWarning": {
- 	 	 	 	"trans": "Данный перевод находится в открытом доступе и был предоставлен нашими игроками. Скорее всего не завершен и содержаит ошибки. Дополнить его можно на нашей странице GitHub",
+ 	 	 	 	"trans": "Данный перевод находится в открытом доступе и был предоставлен нашими игроками. Скорее всего не завершен и содержит ошибки. Дополнить его можно на нашей странице GitHub",
  	 	 	 	"eng": "This language pack is open source and contributed by our players, the text may not be fully translated and could contain mistakes. please feel free to edit and contribute from our Github page"
  	 	 	},
  	 	 	"playBackgroundMusic": {
@@ -3115,7 +3115,7 @@
  	 	 	 	 	"eng": "Nearby Enemies"
  	 	 	 	},
  	 	 	 	"desc": {
- 	 	 	 	 	"trans": "Ишите противников на улице, за пределами подземелий они слабее и их легче победить. Однако, за них дают меньше опыта",
+ 	 	 	 	 	"trans": "Ищите противников на улице, за пределами подземелий они слабее и их легче победить. Однако, за них дают меньше опыта",
  	 	 	 	 	"eng": "Scans for nearby enemies on the street, enemies outside dungeons are weaker and easier to defeat. However they also drop less exp"
  	 	 	 	}
  	 	 	}
@@ -3496,7 +3496,7 @@
  	 	 	 	"eng": "Health"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "увеличение",
+ 	 	 	 	"trans": "увеличение максимального здоровья",
  	 	 	 	"eng": "Increases maximum health"
  	 	 	}
  	 	},
@@ -5106,7 +5106,7 @@
  	 	 	"eng": "of Stunning"
  	 	},
  	 	"bargain": {
- 	 	 	"trans": "Gереговоров",
+ 	 	 	"trans": "переговоров",
  	 	 	"eng": "of Bargaining"
  	 	},
  	 	"power": {
