--- a/contribution/lang/ko.json
+++ b/contribution/lang/ko.json
@@ -2266,7 +2266,7 @@
  	 	 	 	},
  	 	 	 	"subtitle": {
  	 	 	 	 	"trans": "아이템 투입",
- 	 	 	 	 	"eng": "Please insert an item"
+ 	 	 	 	 	"eng": "Please inset an item"
  	 	 	 	}
  	 	 	},
  	 	 	"selectItemButton": {
