--- a/contribution/lang/de.json
+++ b/contribution/lang/de.json
@@ -4913,7 +4913,7 @@
  	 	 	 	"eng": "If you have some spare change it would be very helpful if you could donate to help with continued support and development of the game."
  	 	 	},
  	 	 	"content4": {
- 	 	 	 	"trans": "Bitte spenden Sie nur, wenn Sie sich wohl fühlen, alle Vorteile sollen für alle Spieler fair sein und keinen Rand im Gameplay geben.",
+ 	 	 	 	"trans": "Bitte spenden Sie nur, wenn Sie sich wohl fühlen, alle Vorteile sollen für alle Spieler fair sein und keine Nachteile im Spielgeschehen erzeugen.",
  	 	 	 	"eng": "Please only donate if you are comfortable, all benefits are designed to be fair for all players and will not give an edge in gameplay."
  	 	 	}
  	 	},
@@ -4922,11 +4922,11 @@
  	 	 	"eng": "Monthly Subscription"
  	 	},
  	 	"benefits": {
- 	 	 	"trans": "Leistungen",
+ 	 	 	"trans": "Vorteile",
  	 	 	"eng": "benefits"
  	 	},
  	 	"TiersTitle": {
- 	 	 	"trans": "Spendenreihen",
+ 	 	 	"trans": "Spender Stufen",
  	 	 	"eng": "Donation Tiers"
  	 	},
  	 	"unitPrice": {
@@ -4937,7 +4937,7 @@
  	 	 	"eng": "${price} Unit"
  	 	},
  	 	"permanentDescription": {
- 	 	 	"trans": "Dieser Titel läuft niemals aus. \\ Nit bleibt für immer mit Ihrem Konto.",
+ 	 	 	"trans": "Dieser Titel läuft niemals aus. \\ Es bleibt für immer bei ihrem Konto.",
  	 	 	"eng": "This title will never expire.\\nIt stays with your account forever."
  	 	}
  	},
@@ -4945,21 +4945,21 @@
  	 	"requirement": {
  	 	 	"damage": {
  	 	 	 	"name": {
- 	 	 	 	 	"trans": "Schaden anrichten",
+ 	 	 	 	 	"trans": "Zerstörer",
  	 	 	 	 	"eng": "Deal damage"
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "Beschädigungsschaden an jedem Feind",
+ 	 	 	 	 	"trans": "Richte Schaden an irgendeinem Feind an",
  	 	 	 	 	"eng": "Deal damage to any enemy"
  	 	 	 	}
  	 	 	},
  	 	 	"money": {
  	 	 	 	"name": {
- 	 	 	 	 	"trans": "Bitcoins erwerben",
+ 	 	 	 	 	"trans": "Get rich boi",
  	 	 	 	 	"eng": "Acquire Bitcoins"
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "Bitcoins in irgendeiner Weise erwerben",
+ 	 	 	 	 	"trans": "Erwerbe Bitcoins in irgendeiner Art und Weise.",
  	 	 	 	 	"eng": "Acquire Bitcoins in any way"
  	 	 	 	}
  	 	 	},
@@ -4975,67 +4975,67 @@
  	 	 	},
  	 	 	"enemyKill": {
  	 	 	 	"name": {
- 	 	 	 	 	"trans": "Töte den Feind",
+ 	 	 	 	 	"trans": "Wir machen keine Gefangenen",
  	 	 	 	 	"eng": "Kill enemy"
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "Töte einen Feind",
+ 	 	 	 	 	"trans": "Töte Sie einen Feind.",
  	 	 	 	 	"eng": "Kill any enemy"
  	 	 	 	}
  	 	 	},
  	 	 	"molecularPrint": {
  	 	 	 	"name": {
- 	 	 	 	 	"trans": "Druckausrüstung",
+ 	 	 	 	 	"trans": "3D-Drucker sind cool",
  	 	 	 	 	"eng": "Print equipment"
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "Verwenden Sie den molekularen Druck, um einen beliebigen Artikel-Cache zu drucken",
+ 	 	 	 	 	"trans": "Verwenden Sie den molekularen Drucker, um einen beliebigen Artikel zu drucken",
  	 	 	 	 	"eng": "use molecular print to print any item cache"
  	 	 	 	}
  	 	 	},
  	 	 	"joinDungeon": {
  	 	 	 	"name": {
- 	 	 	 	 	"trans": "Treten Sie Dungeon an",
+ 	 	 	 	 	"trans": "Samariter",
  	 	 	 	 	"eng": "Join Dungeon"
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "Kleben Sie den Dungeon eines anderen Spielers an",
+ 	 	 	 	 	"trans": "Treten Sie dem Dungeon eines anderen Spielers bei.",
  	 	 	 	 	"eng": "Join other player's dungeon"
  	 	 	 	}
  	 	 	},
  	 	 	"clearChallengeDungeon": {
  	 	 	 	"name": {
- 	 	 	 	 	"trans": "Clear Challenge Dungeon",
+ 	 	 	 	 	"trans": "Du kannst das schaffen",
  	 	 	 	 	"eng": "Clear challenge dungeon"
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "Ein Challenge-Dungeon löschen (kann Co-op sein)",
+ 	 	 	 	 	"trans": "Beende einen Challenge-Dungeon (kann Co-op sein)",
  	 	 	 	 	"eng": "Clear a challenge dungeon (can be co-op)"
  	 	 	 	}
  	 	 	},
  	 	 	"clearDungeon": {
  	 	 	 	"name": {
- 	 	 	 	 	"trans": "Klarer Dungeon",
+ 	 	 	 	 	"trans": "Dungeonsäuberung",
  	 	 	 	 	"eng": "Clear dungeon"
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "Clear jeden Dungeon (kann Co-op sein)",
+ 	 	 	 	 	"trans": "Beenden Sie irgendeinen Dungeon (kann Co-op sein)",
  	 	 	 	 	"eng": "Clear any dungeon (can be co-op)"
  	 	 	 	}
  	 	 	},
  	 	 	"clearDungeonCoOp": {
  	 	 	 	"name": {
- 	 	 	 	 	"trans": "Klarer Dungeon mit Freunden",
+ 	 	 	 	 	"trans": "Zusammen geht's einfacher",
  	 	 	 	 	"eng": "Clear dungeon with friends"
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "Löschen Sie einen Dungeon mit 1 oder mehr Spielern",
+ 	 	 	 	 	"trans": "Säubern Sie einen Dungeon mit 1 oder mehr Spielern.",
  	 	 	 	 	"eng": "Clear any dungeon with 1 or more players"
  	 	 	 	}
  	 	 	},
  	 	 	"globalChat": {
  	 	 	 	"name": {
- 	 	 	 	 	"trans": "Verwenden Sie den globalen Chat",
+ 	 	 	 	 	"trans": "Plaudere doch ein wenig",
  	 	 	 	 	"eng": "Use global chat"
  	 	 	 	},
  	 	 	 	"description": {
@@ -5049,13 +5049,13 @@
  	 	 	 	 	"eng": "Open Crate"
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "Kiste in Dungeon öffnen",
+ 	 	 	 	 	"trans": "Öffne eine Kiste in einem Dungeon.",
  	 	 	 	 	"eng": "Open crate in dungeon"
  	 	 	 	}
  	 	 	},
  	 	 	"sellItem": {
  	 	 	 	"name": {
- 	 	 	 	 	"trans": "Ein Kaufmann sein",
+ 	 	 	 	 	"trans": "Sei ein Händler",
  	 	 	 	 	"eng": "Be a merchant"
  	 	 	 	},
  	 	 	 	"description": {
@@ -5087,7 +5087,7 @@
  	 	 	 	 	"amount",
  	 	 	 	 	"itemName"
  	 	 	 	],
- 	 	 	 	"trans": "Kauf von ${amount} von ${itemName}",
+ 	 	 	 	"trans": "Kaufe ${amount} von ${itemName}",
  	 	 	 	"eng": "Buying ${amount} of ${itemName}"
  	 	 	},
  	 	 	"priceDisplay": {
@@ -5102,7 +5102,7 @@
  	},
  	"itemTrait": {
  	 	"stun": {
- 	 	 	"trans": "atemberaubend",
+ 	 	 	"trans": "betäuben",
  	 	 	"eng": "of Stunning"
  	 	},
  	 	"bargain": {
@@ -5114,15 +5114,15 @@
  	 	 	"eng": "of Power"
  	 	},
  	 	"health": {
- 	 	 	"trans": "von Gesundheit",
+ 	 	 	"trans": "zur Gesundheit",
  	 	 	"eng": "of Health"
  	 	},
  	 	"healthRegen": {
- 	 	 	"trans": "des Lebens",
+ 	 	 	"trans": "zur Lebensregeneration",
  	 	 	"eng": "of Life"
  	 	},
  	 	"maxShield": {
- 	 	 	"trans": "der Abschirmung",
+ 	 	 	"trans": "des Schildes",
  	 	 	"eng": "of Shielding"
  	 	},
  	 	"sneaky": {
@@ -5130,7 +5130,7 @@
  	 	 	"eng": "of Sneaking"
  	 	},
  	 	"evade": {
- 	 	 	"trans": "der Umwelzung",
+ 	 	 	"trans": "ausweichen",
  	 	 	"eng": "of Evasion"
  	 	},
  	 	"pocketed": {
@@ -5138,15 +5138,15 @@
  	 	 	"eng": "with pockets"
  	 	},
  	 	"criticalChanceArmor": {
- 	 	 	"trans": "der Kritik-Chance",
+ 	 	 	"trans": "der Chance kritisch gegen Rüstungen zu treffen",
  	 	 	"eng": "of Crit Chance"
  	 	},
  	 	"criticalChanceWeapon": {
- 	 	 	"trans": "der Kritik-Chance",
+ 	 	 	"trans": "der Chance kritisch zu treffen",
  	 	 	"eng": "of Crit Chance"
  	 	},
  	 	"criticalDamageArmor": {
- 	 	 	"trans": "von Kritikernschäden",
+ 	 	 	"trans": "des kritischen Schadens gegen Rüstungen",
  	 	 	"eng": "of Brutality"
  	 	},
  	 	"healingMultiplier": {
@@ -5158,11 +5158,11 @@
  	 	 	"eng": "of Crit Damage"
  	 	},
  	 	"upgradeHealth": {
- 	 	 	"trans": "von Gesundheit",
+ 	 	 	"trans": "der Gesundheit",
  	 	 	"eng": "of Health"
  	 	},
  	 	"upgradeDamage": {
- 	 	 	"trans": "Schäden",
+ 	 	 	"trans": "des Schadens",
  	 	 	"eng": "of Damage"
  	 	},
  	 	"upgradeShield": {
@@ -5174,23 +5174,23 @@
  	 	 	"eng": "of Sneaking"
  	 	},
  	 	"upgradeHealthRegen": {
- 	 	 	"trans": "des Lebens",
+ 	 	 	"trans": "der Lebensregeneration",
  	 	 	"eng": "of Life"
  	 	},
  	 	"upgradeStun": {
- 	 	 	"trans": "von stun",
+ 	 	 	"trans": "der Betäubung",
  	 	 	"eng": "of Stun"
  	 	},
  	 	"upgradeCriticalChance": {
- 	 	 	"trans": "der Kritik-Chance",
+ 	 	 	"trans": "der Chance kritisch zu treffen",
  	 	 	"eng": "of Crit Chance"
  	 	},
  	 	"upgradeCriticalDamage": {
- 	 	 	"trans": "von Kritikernschäden",
+ 	 	 	"trans": "von kritischen Schaden",
  	 	 	"eng": "of Crit Damage"
  	 	},
  	 	"upgradeEvade": {
- 	 	 	"trans": "von Evenade",
+ 	 	 	"trans": "von Ausweichen",
  	 	 	"eng": "of Evade"
  	 	},
  	 	"upgradePocketed": {
@@ -5240,17 +5240,17 @@
  	 	 	 	"eng": "Lethal"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "befasst sich mit erhöhter Schäden an Tiere. Erhält erhöhte Schäden an der Fängerbande.",
+ 	 	 	 	"trans": "Erhöht den Schaden gegen die Tierbande.  Bekommt mehr Schaden von den Plünderern.",
  	 	 	 	"eng": "deals increased damage to Animals gang. receives increased damage from Scavengers gang."
  	 	 	}
  	 	},
  	 	"mark2": {
  	 	 	"displayName": {
- 	 	 	 	"trans": "Disruptor",
+ 	 	 	 	"trans": "Unterbrecher",
  	 	 	 	"eng": "Disruptor"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "befasst sich mit erhöhter Schäden an Voodoo Boys Gang. erhält erhöhte Schäden an der Tierebande.",
+ 	 	 	 	"trans": "Erhöht den Schaden gegen die Voodoo-Jungs-Bande.  Bekommt mehr Schaden von der Tierbande.",
  	 	 	 	"eng": "deals increased damage to Voodoo Boys gang. receives increased damage from Animals gang."
  	 	 	}
  	 	},
@@ -5260,7 +5260,7 @@
  	 	 	 	"eng": "Makeshift"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "befasst sich mit erhöhter Schäden an der Fängerbande. Erhält erhöhte Schäden von Voodoo Boys Gang.",
+ 	 	 	 	"trans": "Erhöht den Schaden gegen die Plünderer.  Bekommt mehr Schaden von der Voodoo-Jungs Bande.",
  	 	 	 	"eng": "deals increased damage to Scavengers gang. receives increased damage from Voodoo Boys gang."
  	 	 	}
  	 	}
@@ -5280,7 +5280,7 @@
  	 	},
  	 	"gang3": {
  	 	 	"displayName": {
- 	 	 	 	"trans": "Sänger",
+ 	 	 	 	"trans": "Plünderer",
  	 	 	 	"eng": "Scavengers"
  	 	 	}
  	 	}
