--- a/contribution/lang/ko.json
+++ b/contribution/lang/ko.json
@@ -242,7 +242,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"segmentStationName"
  	 	 	 	],
- 	 	 	 	"trans": "${segmentStationName} 역으로 이동",
+ 	 	 	 	"trans": "${segmentStationName}으로 이동",
  	 	 	 	"eng": "go to ${segmentStationName}"
  	 	 	}
  	 	},
