--- a/contribution/lang/de.json
+++ b/contribution/lang/de.json
@@ -840,7 +840,7 @@
  	 	 	 	"eng": "Military grade ammunition tech parts, commonly used by government, military and the elites,can be used to craft into usable Ammo if you have the know-how"
  	 	 	}
  	 	},
- 	 	"techScrap": {
+ 	 	"tech": {
  	 	 	"name": {
  	 	 	 	"trans": "Technikschrott",
  	 	 	 	"eng": "Tech Scrap"
@@ -4364,7 +4364,7 @@
  	 	 	},
  	 	 	"useItem": {
  	 	 	 	"localFightCantUseItem": {
- 	 	 	 	 	"trans": "Sie können den Artikel während der Straßenkämpfe nicht verwenden, Elemente sind nur bei Dungeons verfügbar",
+ 	 	 	 	 	"trans": "Sie können den Gegenstand während der Straßenkämpfe nicht verwenden. Das ist nur in Dungeons möglich.",
  	 	 	 	 	"eng": "You cannot use item during street fights, items are only available during dungeons"
  	 	 	 	}
  	 	 	}
@@ -4376,7 +4376,7 @@
  	 	 	"eng": "Click here to scan for street enemies"
  	 	},
  	 	"localCombat": {
- 	 	 	"trans": "Du erhälst Ep, ${currencyName} und Gegenstände, wenn Sie Feinde besiegen, \n                 Versuch es jetzt!",
+ 	 	 	"trans": "Du erhälst Ep, ${currencyName} und Gegenstände, wenn du Feinde besiegst. \n                 Versuche es jetzt!",
  	 	 	"eng": "you will receive exp, ${currencyName} and loots when you defeat enemies,\n                give it a try now!"
  	 	},
  	 	"primaryAttack": {
@@ -4384,15 +4384,15 @@
  	 	 	"eng": "Click here to attack the enemy"
  	 	},
  	 	"statusInv": {
- 	 	 	"trans": "Klicken Sie auf \"Alle nehmen\", um alle Beute zu erhalten",
+ 	 	 	"trans": "Klicke auf \"Alle nehmen\", um alle Gegenstände zu erhalten.",
  	 	 	"eng": "Click 'TAKE ALL' to get all the loots"
  	 	},
  	 	"dungeonQuest": {
- 	 	 	"trans": "Klicken Sie auf \"Quest annehmen\", um die Quest anzunehmen, Sie können die Suche jederzeit abschließen oder aufgeben",
+ 	 	 	"trans": "Klicke auf \"Quest annehmen\", um die Quest anzunehmen. Diese Quest kann jederzeit beendet oder abgebrochen werden.",
  	 	 	"eng": "Click 'ACCEPT QUEST' to accept the quest, you may complete or abandon the quest at any time"
  	 	},
  	 	"localCombatTip": {
- 	 	 	"trans": "Sie erhalten exp, Bitcoin und Beute, wenn Sie Feinde besiegen, \n                 Gib es einen Versuch jetzt!",
+ 	 	 	"trans": "Du erhälst Ep, Bitcoin und Gegenstände, wenn du Feinde besiegst. \n                Versuche es jetzt!",
  	 	 	"eng": "you will receive exp, Bitcoin and loots when you defeat enemies,\n                give it a try now!"
  	 	}
  	},
@@ -4409,7 +4409,7 @@
  	 	},
  	 	"paypal": {
  	 	 	"paypalBonusTitle": {
- 	 	 	 	"trans": "Alle Paypal-Käufe gewähren 10% zusätzliche Einheiten! Sie können Paypal nur auf der Website-Version verwenden, melde dich einfach mit deinem Browser an.",
+ 	 	 	 	"trans": "Alle Paypal-Käufe gewähren 10% zusätzliche Einheiten! Du kannst Paypal nur auf der Website-Version verwenden, melde dich einfach mit deinem Browser an.",
  	 	 	 	"eng": "All PayPal purchases grants 10% additional Units! You may use paypal only on website version, simply login with your browser."
  	 	 	},
  	 	 	"paypalBonus": {
