--- a/contribution/lang/ko.json
+++ b/contribution/lang/ko.json
@@ -66,7 +66,7 @@
  	 	 	 	"eng": "Shangri-La City center"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "[중앙 허브]\r\n        샹그릴라는 이 대륙에서 가장 번화한 도시들 중 하나이며, 세계 각지에서 온 다양한 사람을 만날 수 있는 곳이다.",
+ 	 	 	 	"trans": "[중앙 허브]\r\n        샹그릴라는 이 대륙에서 가장 번화한 도시들 중 하나이며, 세계 각지에서 온 다양한 사람을 만날 수 있는 곳.",
  	 	 	 	"eng": "[Central Hub]\r\n        One of the busiest cities in the continent. Here you can find all sorts of people from around the globe."
  	 	 	},
  	 	 	"toStation": {
@@ -116,7 +116,7 @@
  	 	 	 	"eng": "Shangri-La Commercial Area"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "[일자리 허브]\r\n        이곳에는 수많은 기업들과 상점들이 있으며, 기술을 갈고 닦기에 완벽한 곳입니다.",
+ 	 	 	 	"trans": "[일자리 허브]\r\n        이곳에는 수많은 기업과 상점들이 있으며, 기술을 갈고 닦기에 완벽한 곳입니다.",
  	 	 	 	"eng": "[Job Hub]\r\n        Here are many shops and businesses reside. The perfect location to hone and refine your skills."
  	 	 	},
  	 	 	"toMainHub": {
@@ -256,7 +256,7 @@
  	 	 	 	"eng": "[Gang]\r\n        The headquarters for you and your gang members to plan and execute your next operation"
  	 	 	},
  	 	 	"cantEnterError": {
- 	 	 	 	"trans": "이 에 들어가기 위해서는 갱에 가입해야 합니다",
+ 	 	 	 	"trans": "이 구역에 들어가기 위해서는 갱에 가입해야 합니다",
  	 	 	 	"eng": "You need to join a gang to enter this area"
  	 	 	}
  	 	}
@@ -290,7 +290,7 @@
  	 	 	 	"eng": "Cosmetic Cyberwear"
  	 	 	},
  	 	 	"tut": {
- 	 	 	 	"trans": "게임이 마음에 들으셨다면, 기부를 고려해 주세요 :)",
+ 	 	 	 	"trans": "게임이 마음에 들으셨다면, 기부를 하는 것을 고려해 주세요 :)",
  	 	 	 	"eng": "If you liked the game, please consider donation :)"
  	 	 	},
  	 	 	"canAccessError": {
@@ -347,7 +347,7 @@
  	 	 	 	"eng": "Terminal"
  	 	 	},
  	 	 	"tut": {
- 	 	 	 	"trans": "다음 지역으로 이동하려면 던전에서 비밀 열쇠 조각을 모으고, \r\n        터미널을 사용하여 다음 지역 열쇠를 제작해야 합니다",
+ 	 	 	 	"trans": "다음 지역으로 이동하려면 던전에서 비밀 열쇠 조각을 모으고, \r\n        터미널을 이용하여 다음 지역 열쇠를 제작해야 합니다",
  	 	 	 	"eng": "To progress to the next area, you need to get Secret Key Fragments from dungeons, \r\n        and use the Terminal to Brute Force the key for next area"
  	 	 	},
  	 	 	"description": {
@@ -411,7 +411,7 @@
  	 	 	 	"eng": "Calibration Station"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "필요한 도구가 있는 작업대를 사용하면 장비를 손볼 수 있습니다.",
+ 	 	 	 	"trans": "필요한 도구가 있는 작업대, 사용하면 장비를 손볼 수 있습니다.",
  	 	 	 	"eng": "A workbench with the necessary tools allows you to tinker with your equipment."
  	 	 	},
  	 	 	"canAccessError": {
@@ -436,7 +436,7 @@
  	 	 	 	"eng": "Lee's Trading Post"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "리 아저씨의 가족이 운영하는 이 가게에서는 당신이 탐험 중에 발견한 것들을 교환할 수 있습니다",
+ 	 	 	 	"trans": "리 아저씨의 가족이 운영하는 가게, 당신이 탐험 중에 발견한 것들을 교환할 수 있습니다",
  	 	 	 	"eng": "A family run trading shop that lets you trade with what they have found while scavenging"
  	 	 	},
  	 	 	"canAccessError": {
@@ -483,7 +483,7 @@
  	 	 	 	"eng": "Hack a Body Mod Clinic"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "신체 개조 진료소에서 유용한 데이터를 다운로드하여 높은 품질의 의료 로봇과 드론을 제작할 수 있도록 합니다.",
+ 	 	 	 	"trans": "신체 개조 진료소에서 유용한 데이터를 다운로드하여, 높은 품질의 의료 로봇과 드론을 제작할 수 있도록 합니다.",
  	 	 	 	"eng": "Download useful data from a local body mod clinic to craft higher quality medical bots and drones."
  	 	 	}
  	 	},
@@ -523,7 +523,7 @@
  	 	 	 	"eng": "Deploy farm bot"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "[오프라인 경험치 파밍]\r\n        던전에 AI를 투입합니다. 이는 AI 코어를 1개 소모할 것이고, 한 번의 자동 사냥을 해낼 수 있습니다.",
+ 	 	 	 	"trans": "[오프라인 경험치 파밍]\r\n        던전에 AI를 투입합니다. 이는 AI 코어를 1개 소모할 것이고, 보통 AI 코어 1개는 한 번의 자동 사냥을 해낼 수 있습니다.",
  	 	 	 	"eng": "[AFK Exp Farm]\r\n        Deploys an AI to dungeon for you. This will use up an AI Core, they usually only just manage the one trip."
  	 	 	},
  	 	 	"tut": {
@@ -583,7 +583,7 @@
  	 	 	 	"eng": "Play MEGA Pachinko Game"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Konnichiwa!! ^___^\r\n        MEGA 파칭코를 플레이 해봐! 엄청난 보상을 받을 수도 있다고!\r\n        세션 당 5000 BTC, 기간 한정 특가!!! <3<3<3\r\n        ##이 이벤트의 스폰서인 Militech에게 경의를 표하며##",
+ 	 	 	 	"trans": "Konnichiwa!! ^___^\r\n        MEGA 파칭코를 플레이 해봐! 엄청난 보상을 받을 수도 있다고!\r\n        한 번당 5000 BTC, 기간 한정 특가!!! <3<3<3\r\n        ##이 이벤트의 스폰서인 Militech에게 경의를 표하며##",
  	 	 	 	"eng": "Konnichiwa!! ^___^\r\n        Come play the MEGA Pachinko! With chance to win HUGE EPIC rewards\r\n        only 5000 btc per session, LIMITED TIME OFFER!!! <3<3<3\r\n        ##Special thanks for Militech for sponsoring this event##"
  	 	 	}
  	 	},
@@ -778,7 +778,7 @@
  	 	 	 	"eng": "Degraded Nano Medic Bot"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "오래된 나노 의료 로봇은 모든 부상을 (*약관 참조) 치료하는 데 사용됩니다!",
+ 	 	 	 	"trans": "오래된 나노 의료 로봇, 모든 부상을 (*약관 참조) 치료하는 데 사용됩니다!",
  	 	 	 	"eng": "Old nano medic bot is used to cure any (*conditions apply) injury!"
  	 	 	}
  	 	},
