--- a/contribution/lang/de.json
+++ b/contribution/lang/de.json
@@ -1354,7 +1354,7 @@
  	 	 	 	"eng": "Collect Protection Fees"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Besteche Regierungsbeamte und SLPD und erhebe Schutzgebühren von Geschäftsinhabern und Bürgern in Shangri-La. Vielleicht bekommst du ein paar EPISCHE Gegenstände von ihnen? (Top-Zwei-Gang-Exklusiv)",
+ 	 	 	 	"trans": "Besteche Regierungsbeamte und SLPD und erhebe Schutzgebühren von Geschäftsinhabern und Bürgern in Shangri-La. Vielleicht bekommst du ein paar EPISCHE Gegenstände von ihnen? (Exklusiv für die Top 2 der Banden)",
  	 	 	 	"eng": "Bribe government officials and the SLPD to collect protection fees from business owners and citizens in Shangri-La. Maybe you’ll get some EPIC items from them? (Exclusive to the Top 2 Gangs on the Occupation Leaderboard"
  	 	 	}
  	 	},
@@ -1614,17 +1614,17 @@
  	 	 	 	"eng": "Allies and Friends"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Willkommen bei CyberCode Online, \r\n         Es wird für Sie sehr nützlich sein Freundschaften mit Menschen online zu Schließen um Co-Op-Quests abzuschließen, \r\n         Fragen Sie die Leute online wenn Sie Fragen haben :) \r\n         Denken Sie daran, wenn Sie im Chat spammen, werden Sie von einem Moderator stummgeschaltet.",
+ 	 	 	 	"trans": "Willkommen bei CyberCode Online, \r\n         Es wird ist nützlich Freundschaften mit Menschen online einzugehen um Co-Op-Quests abzuschließen. \r\n         Frage die, die online sind, solltest du Fragen haben :) \r\n         Denke daran, dass du, wenn du spammst, von Morderatoren stummgeschalten wirst.",
  	 	 	 	"eng": "Welcome to CyberCode Online,\r\n        making friends with people online will be very useful for you to complete co-op quests,\r\n        go ahead ask people online if you have got any questions :)\r\n        Remember, if you spam in the chat, you will be muted by moderators."
  	 	 	}
  	 	},
  	 	"newbie3": {
  	 	 	"displayName": {
- 	 	 	 	"trans": "REACH Drucken von Rang 3",
+ 	 	 	 	"trans": "Erreiche Rang 3 beim Drucken.",
  	 	 	 	"eng": "Reach printing rank 3"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Das Niveau der Elemente, die Sie mit Caches drucken, werden von Ihrem Druckrang bestimmt, \r\n         Ebenen Sie Ihren Druckrang auf, damit Sie höhere Elemente drucken können. \r\n        \r\n         Sie können den molekularen 3D-Drucker in [Central Hub] finden, um einige Caches zu drucken, um Ihren Druckrang aufzuheben",
+ 	 	 	 	"trans": "Das Level der Gegenstände, die du mit Caches druckst, wird von deinem Druckrang bestimmt. \r\n         Erhöhe den Druckrang, um  Gegenstände eines höhren Levels drucken zu können. \r\n        \r\n        Der molekulare 3D-Drucker ist im Stadtzentrum zu finden, nutze ihn um einige Caches zu drucken und deinen Druckrang zu erhöhen.",
  	 	 	 	"eng": "The level of itemS you print with Caches are determined by your Printing Rank,\r\n        level up your Printing Rank so you can print higher level items.\r\n        \r\n        You can find Molecular 3D Printer at [Central Hub], use it to print some caches to level up your Printing Rank"
  	 	 	}
  	 	},
@@ -1663,7 +1663,7 @@
  	 	 	},
  	 	 	"dungeon": {
  	 	 	 	"name": {
- 	 	 	 	 	"trans": "Verlies",
+ 	 	 	 	 	"trans": "Dungeon",
  	 	 	 	 	"eng": "dungeon"
  	 	 	 	}
  	 	 	}
@@ -1673,8 +1673,8 @@
  	 	 	 	"trans": "Markthändler",
  	 	 	 	"eng": "Market merchant"
  	 	 	},
- 	 	 	"description": {
- 	 	 	 	"trans": "Sie können Artikel von Spielern auf dem Player-Markt verkaufen und kaufen, Probieren Sie es aus indem Sie auf dem Spielermarkt einen Artikel hinzufügen",
+ 	 	 	"description": 
+ 	 	 	 	"trans": "Du kannst Artikel von Spielern auf dem Player-Markt kaufen und verkaufen, versuch es einfach mal.",
  	 	 	 	"eng": "You can sell and purchase items from players in the player market, try it out by adding an item to the player market"
  	 	 	}
  	 	}
@@ -1715,11 +1715,11 @@
  	 	 	 	"eng": "rewards"
  	 	 	},
  	 	 	"rewardAvailable": {
- 	 	 	 	"trans": "Klicken Sie hier, um Belohnung zu sammeln",
+ 	 	 	 	"trans": "Klicke hier, um deine Belohnung zu erhalten",
  	 	 	 	"eng": "Click to collect reward"
  	 	 	},
  	 	 	"viewDetails": {
- 	 	 	 	"trans": "Klicken Sie hier, um Details anzuzeigen",
+ 	 	 	 	"trans": "Klicke hier, um Details anzuzeigen",
  	 	 	 	"eng": "Click to view details"
  	 	 	}
  	 	},
@@ -1743,7 +1743,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"hiddenCount"
  	 	 	 	],
- 	 	 	 	"trans": "${hiddenCount} Weitere Reiseoptionen können freigeschaltet werden",
+ 	 	 	 	"trans": "${hiddenCount} weitere Reiseoptionen können freigeschaltet werden",
  	 	 	 	"eng": "${hiddenCount} more travel options can be unlocked"
  	 	 	}
  	 	},
