--- a/contribution/lang/de.json
+++ b/contribution/lang/de.json
@@ -840,7 +840,7 @@
  	 	 	 	"eng": "Military grade ammunition tech parts, commonly used by government, military and the elites,can be used to craft into usable Ammo if you have the know-how"
  	 	 	}
  	 	},
- 	 	"techscrap": {
+ 	 	"techScrap": {
  	 	 	"name": {
  	 	 	 	"trans": "Technikschrott",
  	 	 	 	"eng": "Tech Scrap"
