--- a/contribution/lang/de.json
+++ b/contribution/lang/de.json
@@ -1673,7 +1673,7 @@
  	 	 	 	"trans": "Markthändler",
  	 	 	 	"eng": "Market merchant"
  	 	 	},
- 	 	 	"description": 
+ 	 	 	"description": {
  	 	 	 	"trans": "Du kannst Artikel von Spielern auf dem Player-Markt kaufen und verkaufen, versuch es einfach mal.",
  	 	 	 	"eng": "You can sell and purchase items from players in the player market, try it out by adding an item to the player market"
  	 	 	}
